--- a/src/Game.css
+++ b/src/Game.css
@@ -17,6 +17,7 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   width: 1200px;
   text-align: center;
+  height: 90vh;
 }
 
 .main-content {
@@ -36,7 +37,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin-bottom: 20px;
+  margin: 0 10px 10px 10px;
 }
 
 .character-image {
@@ -47,6 +48,12 @@ body {
 
 .stats {
   text-align: left;
+  width: 60%;
+}
+.stats h1 {
+display: flex;
+margin: auto;
+justify-content: center;
 }
 
 .stat-row {
@@ -54,6 +61,9 @@ body {
   align-items: center;
   gap: 10px;
   margin-bottom: 10px;
+}
+.stat-row p {
+  width: 120px;
 }
 
 .bar {
@@ -63,19 +73,27 @@ body {
   margin: 5px 0;
   flex-grow: 1;
   height: 20px;
+  position: relative;
 }
 
-.hp-bar {
+.bar div {
+  height: 100%;
+  border-radius: 5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.hp-bar div {
   background-color: #ff4444;
 }
 
-.xp-bar {
+.xp-bar div {
   background-color: #4444ff;
 }
 
-.stat-bar {
+.stat-bar div {
   background-color: #44ff44;
-  height: 10px;
 }
 
 .stat-button {
@@ -188,3 +206,8 @@ body {
 .missions-section button:hover {
   background-color: #777;
 }
+
+.missions-section button:disabled {
+  background-color: #333;
+  cursor: not-allowed;
+} 
